GNOME Bugzilla – Bug 668966
Memory leak when parsing a Glyphs element fails
Last modified: 2012-01-30 13:00:26 UTC
Created attachment 206367 [details] [review] add error handler to glyphs GMarkupParser A GXPSGlyphs struct is leaked when parsing fails for a child element of a Glyphs. Example: <Glyphs Fill="#000000" FontRenderingEmSize="48" OriginX="10" OriginY="50" UnicodeString="Hello" FontUri="FreeSans.ttf"> <Glyphs.RenderTransform> <invalid /> </Glyphs.RenderTransform> </Glyphs> Parsing is aborted when invalid data is encountered and cleanup code is not run. This adds a error handler to the glyphs GMarkupParser to free the struct on error.
Review of attachment 206367 [details] [review]: Pushed! Thank you