Fixed memory leak when parsing fails for a child element of a Glyphs

A GXPSGlyphs struct is leaked when parsing fails for a child element
of a Glyphs.  Parsing is aborted when invalid data is encountered and
cleanup code is not run.  This adds a error handler to the glyphs
GMarkupParser to free the struct on error.

https://bugzilla.gnome.org/show_bug.cgi?id=668966